refactor code and correction fixed in run laravel dusk

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,17 +1,17 @@
-APP_NAME=Styde
+APP_NAME=ControlPanel
 APP_ENV=local
 APP_KEY=base64:6eD6KYPxnsGJPGzEmsOEulwukYMJCejac2C38mouhSY=
 APP_DEBUG=true
-APP_URL=http://www.control-panel.saimon
+APP_URL=http://control-panel.saimon
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=curso_styde_dusk
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=panel_control_dusk
+DB_USERNAME=saimon
+DB_PASSWORD=mydbpass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
